--- a/client/app/app.component/app.component.html
+++ b/client/app/app.component/app.component.html
@@ -9,7 +9,7 @@
             <i class="material-icons app-toolbar-menu">menu</i>
         </button>
 
-        Angular Material2 Example App
+        &nbsp;Vince Bloise's Angular Material2 Example App
 
         <span class="app-toolbar-filler"></span>
         <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
