--- a/client/styles.css
+++ b/client/styles.css
@@ -1,4 +1,5 @@
 @import '/node_modules/@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 body {
     margin: 1em;
+    margin-top: -3em;
 }
