Made toolbar wider; added contact info in header

--- a/client/app/app.component/app.component.html
+++ b/client/app/app.component/app.component.html
@@ -9,7 +9,17 @@
             <i class="material-icons app-toolbar-menu">menu</i>
         </button>
 
-        &nbsp;Vince Bloise's Angular Material2 Example App
+        <!--md-card-->
+            <!--md-card-header>
+                <img md-card-avatar src="app/app.component/avatar.jpg">
+            </md-card-header-->
+            <img class="mdCardImg md-card-sm-image" src="app/app.component/VinceBloiseTransparent.png">
+            <!--md-card-content>
+                <p>Here is some more content</p>
+            </md-card-content-->
+        <!--/md-card-->
+
+        &nbsp;Vince Bloise's R&#233;sum&#233;&nbsp; <sub><span style="font-size: x-small">(built with Angular2 and Material Design)</span></sub>
 
         <span class="app-toolbar-filler"></span>
         <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
