--- a/client/app/app.component/app.component.css
+++ b/client/app/app.component/app.component.css
@@ -71,3 +71,37 @@ md-sidenav-layout.m2app-dark {
 .app-progress {
     margin: 20px;
 }
+
+/*.card img {
+    width: 100px;
+    height: 150px;
+}*/
+.mdCardImg {
+    width: 65px;
+    height: 78px;
+    margin: 1em;
+    margin-top: 1.5em;
+}
+md-toolbar {
+    /*background-color: blue !important;*/
+}
+
+.textBottom {
+    position: relative;
+    bottom: -0.25em;
+}
+
+.smallTextBottom {
+    font-size: small;
+    position: relative;
+    bottom: -1em;
+}
+
+.xxLargerFont {
+    font-size: xx-large;
+}
+
+.centerText {
+    position: relative;
+    left: 5em;
+}
