Added material icons for address, phone, and email

--- a/client/app/app.component/app.component.css
+++ b/client/app/app.component/app.component.css
@@ -97,6 +97,11 @@ md-toolbar {
     bottom: -1em;
 }
 
+.iconBottom {
+    position: relative;
+    bottom: -0.25em;
+}
+
 .xxLargerFont {
     font-size: xx-large;
 }
